[package]
name = "dsf-engine"
version = "0.2.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "DSF embedded engine"
repository = "https://github.com/dist-svc/dsf-engine"
homepage = "https://github.com/dist-svc"
keywords = ["DSF", "distributed"]
license = "MPL-2.0"
edition = "2018"

[features]
std = [ "thiserror", "dsf-core/std" ]
alloc = [ "dsf-core/alloc" ]
default = [ "std", "alloc", "sled" ]

[dependencies]
dsf-core = { version = "*", default_features = false }

bitflags = "1.3.2"
byteorder = { version = "1.3.4", default_features = false }
log = { version = "0.4.8", default_features = false }
heapless = "0.7.16"

defmt = { version = "0.3.0", optional = true }
serde = { version = "1.0.104", optional = true }
structopt = { version = "0.3.8", optional = true }
futures = { version = "0.3.1", optional = true }
sled = { version = "0.34.7", optional = true }
thiserror = { version = "*", optional = true }

[dev-dependencies]
simplelog = "*"
anyhow = "*"
tempfile = "*"
